# din-yt-v-api

./: .gitignore  Dockerfile  Makefile  README.md  config.yml  production.yml  pyproject.toml  uwsgi.sh
app/: __init__.py  __main__.py  config.py  db.py  events.py  exceptions.py  models.py  static.py  utils.py  uwsgi.py
app/V1/: __init__.py  models.py  routes.py  utils.py
app/v2/: __init__.py
configs/: README.md  family.yml  organization.yml
configs/uwsgi/: README.md  proxy.ini  static.ini
docs/: DESCRIPTION.md
frontend/: index.html
servers/: README.md  proxy.py  static.py
servers/templates/: 404.html
tests/: __init__.py  test_v1.py  websocket_download.py
